@@ -86,7 +86,9 @@ public class CommandsConfig extends AbstractConfiguration<DuelsPlugin> {
         QUEUE("queue", List.of("q")),
         SPECTATE("spectate", List.of("spec")),
         DUELS("duels", List.of("ds")),
-        KIT("kit", Collections.emptyList());
+        KIT("kit", Collections.emptyList()),
+        CUSTOMKITS("customkits", List.of("customkit", "ckit", "ckits")),
+        REPLAY("replay", List.of("replays", "duelreplay"));
 
         private final String path;
         private final String defaultName;
